updated and packaged inquiry-flink-jobs chart

--- a/helm/inquiry-flink-jobs/values.yaml
+++ b/helm/inquiry-flink-jobs/values.yaml
@@ -130,7 +130,7 @@ base_config: |
       isMultiDCEnabled = false
     }
     neo4j {
-      routePath = "bolt://neo4j.lern.svc.cluster.local:7687"
+      routePath = "bolt://neo4j.inquiry.svc.cluster.local:7687"
       graph = "domain"
     }
     es {
